--- a/exo-ui/package.json
+++ b/exo-ui/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
