--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy Frontend
 
 on:
   push:
-    branches: [ main ]
+    branches: [gh-pages]
 
 permissions:
   contents: read
@@ -14,27 +14,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Install dependencies
         working-directory: ./exo-ui
         run: npm ci
-        
+
       - name: Build
         working-directory: ./exo-ui
         run: npm run build
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './exo-ui/dist'
-          
+          path: "./exo-ui/dist"
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
